<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D1BC8A"
    tools:context=".MainActivity">

    <include
        layout="@layout/content_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


    <ImageView
        android:id="@+id/clover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="280dp"
        android:contentDescription="@string/todo"
        android:elevation="30dp"
        android:src="@drawable/cross"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/textsplash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:elevation="6dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aclonica"
            android:text="@string/welcome_back"
            android:textAlignment="center"
            android:textColor="#FFF"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/activity_main_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aclonica"
            android:hint="@string/name"
            android:textColor="#FFF"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/texthome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </LinearLayout>


    <LinearLayout
        android:id="@+id/menus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:elevation="6dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="146dp"
            android:background="@color/bloody"
            android:fadingEdge="horizontal|vertical"
            android:fadingEdgeLength="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/VideoBtn"
                android:layout_width="173dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="4dp"
                android:background="@drawable/cover"
                android:clickable="true"
                android:focusable="true" />

            <TextView
                android:layout_width="237dp"
                android:layout_height="97dp"
                android:fontFamily="@font/aclonica"
                android:text="Theory &amp; Exercises"
                android:textAlignment="center"
                android:textColor="#0E1843"
                android:textSize="30dp" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="146dp"
            android:background="@color/bloody"
            android:fadingEdge="horizontal|vertical"
            android:fadingEdgeLength="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/VideoBtn2"
                android:layout_width="173dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="4dp"
                android:background="@drawable/cover"
                android:clickable="true"
                android:focusable="true" />

            <TextView
                android:layout_width="237dp"
                android:layout_height="97dp"
                android:fontFamily="@font/aclonica"
                android:text="Liturgia"
                android:textAlignment="center"
                android:textColor="#0E1843"
                android:textSize="30dp" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="146dp"
            android:background="@color/bloody"
            android:fadingEdge="horizontal|vertical"
            android:fadingEdgeLength="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/VideoBtn3"
                android:layout_width="173dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="4dp"
                android:background="@drawable/cover"
                android:clickable="true"
                android:focusable="true" />

            <TextView
                android:layout_width="237dp"
                android:layout_height="97dp"
                android:fontFamily="@font/aclonica"
                android:text="Texting"
                android:textAlignment="center"
                android:textColor="#0E1843"
                android:textSize="30dp" />
        </LinearLayout>


    </LinearLayout>


    <ImageView
        android:id="@+id/bgapp"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_margin="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/todo"
        android:scaleType="fitXY"
        android:src="@drawable/bgappy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.923"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_menu" />

</androidx.drawerlayout.widget.DrawerLayout>